Fix double scroll bars for mod descriptoins

--- a/static/css/community.css
+++ b/static/css/community.css
@@ -73,6 +73,10 @@
     padding: 5px;
 }
 
+.mod-desc > * {
+  overflow-y: hidden!important;
+}
+
 .tag-button {
     padding: 10px;
     font-weight: bold;
